fix(REQ-7): 完善单测运行架构，好感度改用 float 类型存储